--- a/gb/20/9/1/n12373117.md
+++ b/gb/20/9/1/n12373117.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qtfwow338/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qtfwow338/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qtfwow338/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qtfwow338/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>大陆业者：中共芯片行业落后美国至少20年</h2>
 
 <h6></h6>
 <hr>
-	<p>【大纪元2020年09月01日讯】（大纪元记者张玉洁综合报导）尽管<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>正在搞<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E8%8A%AF%E7%89%87.md#1">芯片</a>“大跃进”，称要在五年内实现芯片自给率翻一番，但近日大陆芯片业内人士表示，大陆的芯片行业<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E8%90%BD%E5%90%8E.md#1">落后</a>美国至少20年，更难以承受美国的制裁。</p>
+	<p>【大纪元2020年09月01日讯】（大纪元记者张玉洁综合报导）尽管<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>正在搞<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%8A%AF%E7%89%87.md#1">芯片</a>“大跃进”，称要在五年内实现芯片自给率翻一番，但近日大陆芯片业内人士表示，大陆的芯片行业<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%90%BD%E5%90%8E.md#1">落后</a>美国至少20年，更难以承受美国的制裁。</p>
 <p><strong>听新闻：</strong></p>
 <div style="width: 100%; height: 170px; margin-bottom: 20px; border-radius: 10px; overflow:hidden;"><a style="width: 100%; height: 170px;" frameborder="no" allow="autoplay" scrolling="no" seamless src="https://player.captivate.fm/episode/5582da59-8832-4954-9755-58301991043a"></a></div>
-<p>彭博社8月31日报导，大陆<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E8%8A%AF%E7%89%87.md#1">芯片</a>企业中科融合的执行长王旭光承认，大陆整个芯片行业太脆弱，从人才的规模和品质，到整个产业生态系，与美国硅谷相比至少<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E8%90%BD%E5%90%8E.md#1">落后</a>20年。</p>
+<p>彭博社8月31日报导，大陆<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%8A%AF%E7%89%87.md#1">芯片</a>企业中科融合的执行长王旭光承认，大陆整个芯片行业太脆弱，从人才的规模和品质，到整个产业生态系，与美国硅谷相比至少<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%90%BD%E5%90%8E.md#1">落后</a>20年。</p>
 <p>中国联想集团投资部门“君联资本”董事总经理Arthur Ge也认为，中国科技业可能难以承受美国进一步制裁。</p>
-<p>大陆芯片技术正被<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>用于监控和窃取资料，这已经经美国安全部门证实。除了美英澳新印等多国与华为5G脱钩，美国全面启动了对中共的芯片制裁，包括禁止向华为及其相关企业出售芯片，考虑限制出口芯片制造设备及相关软件工具、激光器、传感器和其它技术等。</p>
+<p>大陆芯片技术正被<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>用于监控和窃取资料，这已经经美国安全部门证实。除了美英澳新印等多国与华为5G脱钩，美国全面启动了对中共的芯片制裁，包括禁止向华为及其相关企业出售芯片，考虑限制出口芯片制造设备及相关软件工具、激光器、传感器和其它技术等。</p>
 <p>目前，中共正在大搞芯片“大跃进”，称芯片自给率要从2019年的30%增加到2025年的70%，更在8月份提出减免税费和大笔投资等刺激措施。但业界普遍认为，从技术上看，中共的芯片“大跃进”只是空谈。</p>
 <p>大陆目前的最高技术仅为14奈米芯片制程，去年底量产，今年底才能大批量产，而国际主流技术是5奈米和3奈米制程，相差至少三代。中共持续从台积电等外企“挖人”，但台湾政府近日宣布，将严格审查向大陆提供技术的台湾芯片设计者。</p>
 <p>另据8月30日消息，大陆唯一一台生产7nm芯片的光刻机将被拿去银行抵押，原因是拥有该光刻机的武汉弘芯半导体制造有限公司发生资金链断裂。</p>
@@ -24,41 +24,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/8/24/n12354396.md#1">停供华为？韩两大手机核心芯片厂正进行评估</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/8/26/n12359198.md#1">A股芯片股普跌 中芯国际跌逾6% 蒸发1500亿</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/8/26/n12359792.md#1">美拟严控芯片等技术出口 反制中共军民融合</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/8/29/n12366668.md#1">中国人工智能公司被美制裁 芯片供应恐吃紧</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/24/n12354396.md#1">停供华为？韩两大手机核心芯片厂正进行评估</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/26/n12359198.md#1">A股芯片股普跌 中芯国际跌逾6% 蒸发1500亿</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/26/n12359792.md#1">美拟严控芯片等技术出口 反制中共军民融合</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/29/n12366668.md#1">中国人工智能公司被美制裁 芯片供应恐吃紧</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/20/2/11/n11861529.md#1">瘟疫来势汹汹  为何绕开了这些人</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/9/12/n4526041.md#1" target="_blank">子华：谁是真正破坏社会安定的人</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/18/n10793353.md#1" target="_blank">林辉：金庸堂哥穆旦走到了幻想的尽头</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/28/n11751194.md#1" target="_blank">【2019盘点】响彻世界政坛的正义之声</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/3/n13553506.md#1">【未解之谜】梅辛传之三：希特勒的预言</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/17/n13582748.md#1">【奇事】这一种算命术连皇帝都大为惊奇</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/14/n13576687.md#1">【百年真相】瞒天过海 中共炮制“美军细菌战”</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/1/27/n13533579.md#1">唐朝皇族后裔的教训 德性有亏一夕化虎</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/26/n13607630.md#1">【菁英论坛】韩大选撬动东亚格局 专家忧选举舞弊</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/26/n13606496.md#1">【军事热点】北约加强东翼兵力 应对俄罗斯入侵</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/26/n13606937.md#1">【马克时空】乌克兰抗俄 刺针、标枪、NLAW导弹立战功</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/25/n13605758.md#1">应对俄乌开战 北约反应部队启动 史上首次</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/24/n13603115.md#1">鼓鼓钱包失而复得 杜汶泽妻田蕊妮大赞台湾</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/25/n13605474.md#1">消息：美与北京分享俄入侵情报 中共向俄泄密</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/24/n13603115.md#1">鼓鼓钱包失而复得 杜汶泽妻田蕊妮大赞台湾</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/25/n13605706.md#1">陈婷宣布取消“张艺谋妻子”微博头衔 引猜测</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/24/n13602961.md#1">产后10天俄乌开战 瑞莎焦虑乌克兰亲人全失联</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/24/n13603338.md#1">酒店隔离与好友成邻居 舒淇：巧到不能再巧</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/25/n13604262.md#1">西恩潘“人在乌克兰” 挺进战地拍入侵纪录片</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/25/n13604960.md#1">坚果是抗糖尿病绝佳食物 防高血糖、并发症</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/24/n13602100.md#1">世界各地的长寿人群都吃些什么食物？</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/18/n13586671.md#1">不吃早餐糖尿病风险增40％ 3组早餐养胃强身</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/24/n13602281.md#1">金盏花对皮肤很好 还能消炎止痛、促伤口愈合</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/24/n13602257.md#1">早期胃癌难发现 八个症状需警惕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679009.md#1">【秦鹏直播】为李莹发声险被抓 王圣强：不怕消失</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679468.md#1">【探索时分】叙利亚雇佣兵能帮上俄罗斯吗？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/qtfwow338/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/qtfwow338/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/1/n12373117.htm">大陆业者：中共芯片行业落后美国至少20年</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/1/n12373117.htm">大陆业者：中共芯片行业落后美国至少20年</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/qtfwow338/djy/blob/master/gb/20/9/1/n12373117.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qtfwow338/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qtfwow338/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qtfwow338/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/9/1/n12373117.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
